...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        actions: [
          IconButton(
            key: const ValueKey('command-palette-button'),
            tooltip: 'Show Command Palette',
            onPressed: onCommandPalette,
            icon: const Icon(Icons.search),
          ),
        ],
        title: SingleChildScrollView(
...
